Corrected center alignment

--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,8 @@ html, body {
 body {
   font-family: 'Vollkorn', serif;
   margin: 0 3% 0;
-  text-align: center;
-}
+/*  text-align: center;
+*/}
 
 h1{color: white;
   font-size: 1rem;
@@ -28,8 +28,8 @@ h1{color: white;
      }
 
 
-/*h1, h2, h3, h4, h6{
-  text-align: center;}*/
+h1, h2, h3, h4, h6{
+  text-align: center;}
 
 h6{color:red;
     font-size: 1rem;}
